--- a/docker/nginx/conf.d/nginx.conf
+++ b/docker/nginx/conf.d/nginx.conf
@@ -1,7 +1,7 @@
 server {
     listen 80;
     listen [::]:80;
-    server_name laravel-ydb.com;
+    server_name larvel-ydb.ru;
     root /var/www/public;
 
     add_header X-Frame-Options "SAMEORIGIN";
@@ -30,3 +30,4 @@ server {
         deny all;
     }
 }
+
